<?xml version="1.0"?>
<package format="2">
  <name>mine_world</name>
  <version>1.0.0</version>
  <description>A GAZEBO mine shaft environment constructed to test vertical shaft inspections</description>

  <maintainer email="vigkot@ltu.se">Vignesh Kottayam Viswanathan</maintainer>

  <license>MIT</license>

  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
	<gazebo_ros gazebo_model_path="${prefix}/worlds/models"/>
  </export>
</package>
